syntax = "proto3";

package slash.api.v1;

import "api/v1/common.proto";
import "api/v1/subscription_service.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/protobuf/field_mask.proto";

option go_package = "gen/api/v1";

service WorkspaceService {
  rpc GetWorkspaceProfile(GetWorkspaceProfileRequest) returns (GetWorkspaceProfileResponse) {
    option (google.api.http) = {get: "/api/v1/workspace/profile"};
  }
  rpc GetWorkspaceSetting(GetWorkspaceSettingRequest) returns (GetWorkspaceSettingResponse) {
    option (google.api.http) = {get: "/api/v1/workspace/setting"};
  }
  rpc UpdateWorkspaceSetting(UpdateWorkspaceSettingRequest) returns (UpdateWorkspaceSettingResponse) {
    option (google.api.http) = {
      patch: "/api/v1/workspace/setting"
      body: "setting"
    };
    option (google.api.method_signature) = "setting,update_mask";
  }
}

message WorkspaceProfile {
  // Current workspace mode: dev, prod.
  string mode = 1;
  // Current workspace version.
  string version = 2;
  // The workspace plan.
  PlanType plan = 3;
  // Whether to enable other users to sign up.
  bool enable_signup = 4;
  // The custom style.
  string custom_style = 5;
  // The owner name.
  // Format: "users/{id}"
  string owner = 6;
}

message WorkspaceSetting {
  // The custom style.
  string custom_style = 1;
  // The default visibility of shortcuts and collections.
  Visibility default_visibility = 2;
}

message GetWorkspaceProfileRequest {}

message GetWorkspaceProfileResponse {
  // The workspace profile.
  WorkspaceProfile profile = 1;
}

message GetWorkspaceSettingRequest {}

message GetWorkspaceSettingResponse {
  // The user setting.
  WorkspaceSetting setting = 1;
}

message UpdateWorkspaceSettingRequest {
  // The user setting.
  WorkspaceSetting setting = 1;
  // The update mask.
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateWorkspaceSettingResponse {
  // The user setting.
  WorkspaceSetting setting = 1;
}
